Changed index.html formatting

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>WaterSite</title>
 	</head>
+
 	<body>
-		<noscript>
-			JavaScript is required
-		</noscript>
+		<noscript>JavaScript is required</noscript>
+
 		<div id="root"></div>
 	</body>
 
