Added a webgl2 canvas

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 		<noscript>JavaScript is required</noscript>
 
 		<div id="root"></div>
+		<canvas id="glcanvas" width="640" height="480""></canvas>
 	</body>
 
 	<script src="bundle.js"></script>
