Made glcanvas fill all available space

--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,14 @@
 <html>
 	<head>
 		<title>WaterSite</title>
+		<link rel="stylesheet" href="index.css">
 	</head>
 
 	<body>
 		<noscript>JavaScript is required</noscript>
 
 		<div id="root"></div>
-		<canvas id="glcanvas" width="640" height="480""></canvas>
+		<canvas id="glcanvas"></canvas>
 	</body>
 
 	<script src="bundle.js"></script>
